# SDC-AI-LectureNotes

./: .gitignore  .gitignore.swp  README.md
c++/hyoungjunlee/class_test/: CMakeLists.txt  main.cpp
c++/hyoungjunlee/class_test/dice/: Dice.cpp
c++/hyoungjunlee/class_test/player/: Player.cpp
c++/hyoungjunlee/class_test/post/: Post.cpp  Post.h
c++/hyoungjunlee/class_test/vector/: Vector.cpp  Vector.h
c++/jaelimlee/class_test/: CMakeLists.txt  main.cpp
c++/jaelimlee/class_test/account/repository/: AccountRepositoryImpl.cpp  AccountRepositoryImpl.h
c++/jaelimlee/class_test/board/controller/: BoardController.cpp  BoardController.h
c++/jaelimlee/class_test/board/repository/: BoardRepositoryImpl.cpp  BoardRepositoryImpl.h
c++/jaelimlee/class_test/board/service/: BoardService.h  BoardServiceImpl.h
c++/jaelimlee/class_test/console_ui/repository/: ConsoleUiRepository.h
c++/jaelimlee/class_test/mysql/: DbProcess.cpp  DbProcess.h
c++/jaelimlee/class_test/tests/gogo/: CMakeLists.txt
c++/jaeseunglee/class_test/: CMakeLists.txt
c++/jaeseunglee/class_test/dice/: Dice.cpp  Dice.h
c++/jaeseunglee/class_test/displacement/: Displacement.cpp
c++/jaeseunglee/class_test/orthogonal/: Orthogonal.h
c++/jaeseunglee/class_test/player/: Player.h
c++/jaeseunglee/class_test/post/: Post.cpp  Post.h
c++/jaeseunglee/class_test/spherical/: Spherical.cpp  Spherical.h
c++/jaeseunglee/class_test/utility/: Random_generator.h  System_changer.cpp  System_changer.h
c++/janghunpark/cpp_class_questions/: CMakeLists.txt  main.cpp
c++/janghunpark/cpp_class_questions/Cartesian/: Cartesian.cpp  Cartesian.h
c++/janghunpark/cpp_class_questions/array/: Array.cpp  Array.h
c++/janghunpark/cpp_class_questions/board/: Board.cpp  Board.h
c++/janghunpark/cpp_class_questions/dice/: dice.cpp  dice.h
c++/janghunpark/cpp_class_questions/displacement/: Displacement.cpp  Displacement.h
c++/janghunpark/cpp_class_questions/order/: Order.cpp  Order.h
c++/janghunpark/cpp_class_questions/player/: Player.cpp  Player.h
c++/janghunpark/cpp_class_questions/vector/: Vector.cpp  Vector.h
c++/janghunpark/lecture_clone/cpp_gtest/: CMakeLists.txt
c++/janghunpark/lecture_clone/cpp_gtest/arithmetic/: Sub.cpp  Sub.h
c++/janghunpark/lecture_clone/cpp_gtest/function/: SampleFunction.cpp  SampleFunction.h
c++/janghunpark/newUi/: CMakeLists.txt  main.cpp
c++/junghunwoo/class_test/: CMakeLists.txt  main.cpp
c++/junghunwoo/class_test/board/entity/: Board.cpp  Board.h
c++/junghunwoo/class_test/board/repository/: BoardRepositoryImpl.cpp
c++/junghunwoo/class_test/matrix/: Matrix.cpp  Matrix.h
c++/junghunwoo/class_test/player/: Player.h
c++/junghunwoo/class_test/post/: Post.cpp  Post.h
c++/junghunwoo/class_test/vector/: Vector.cpp  Vector.h
c++/lecture/class_test/: CMakeLists.txt  main.cpp
c++/lecture/class_test/account/controller/: AccountController.cpp  AccountController.h
c++/lecture/class_test/account/entity/: Account.cpp  Account.h
c++/lecture/class_test/account/repository/: AccountRepository.h  AccountRepositoryImpl.cpp  AccountRepositoryImpl.h
c++/lecture/class_test/account/service/: AccountService.h  AccountServiceImpl.cpp  AccountServiceImpl.h
c++/lecture/class_test/board/controller/: BoardController.cpp  BoardController.h
c++/lecture/class_test/board/entity/: Board.cpp  Board.h
c++/lecture/class_test/board/repository/: BoardRepository.h  BoardRepositoryImpl.cpp  BoardRepositoryImpl.h
c++/lecture/class_test/board/service/: BoardService.h  BoardServiceImpl.cpp  BoardServiceImpl.h
c++/lecture/class_test/console_ui/controller/: ConsoleUiController.cpp  ConsoleUiController.h
c++/lecture/class_test/dice/: Dice.cpp
c++/lecture/class_test/mysql/: DbProcess.cpp  DbProcess.h
c++/lecture/first_probs/: CMakeLists.txt  main.cpp
c++/lecture/first_probs/coordinate/: SphericalCoordinate.h
c++/lecture/first_probs/inhomogeneous/: Coordinate.cpp  Coordinate.h
c++/lecture/first_probs/matrix/: Matrix.h
c++/lecture/first_probs/utility/: RandomGenerator.cpp
c++/lecture/first_probs/vector/: Vector.cpp  Vector.h
c++/sanggunyoun/homework/class_test/: CMakeLists.txt  main.cpp
c++/seunghunjo/cpp_test/: CMakeLists.txt  main.cpp
c++/seunghunjo/cpp_test/api/: BoardApiTableMapper.h
c++/sungyoungjang/Practice_1/: CMakeLists.txt  main.cpp
c++/sungyoungjang/Practice_1/01_Dice/: Dice.cpp  Dice.h
c++/sungyoungjang/Practice_1/02_Player/: Player.cpp  Player.h
c++/sungyoungjang/Practice_1/03_Post/: Post.cpp  Post.h
c++/sungyoungjang/Practice_1/04_Vector/: Vector.cpp  Vector.h
c++/sungyoungjang/Practice_1/05_Matrix/: Matrix.cpp  Matrix.h
c/hyoungjunlee/prac2/: CMakeLists.txt  main.c
c/hyoungjunlee/prac2/sample/: sample.c
c/lecture/grammar-prob/: CMakeLists.txt  main.c
c/lecture/grammar-prob/10/: grammar_prob_tenth.h
c/lecture/grammar-prob/2/: grammar_prob_second.c  grammar_prob_second.h
c/lecture/grammar-prob/3/: grammar_prob_third.c
c/lecture/grammar-prob/4/: grammar_prob_fourth.h
c/lecture/grammar-prob/5/: grammar_prob_fifth.c
c/lecture/grammar-prob/6/: grammar_prob_sixth.c
c/lecture/grammar-prob/extra/: i_wanna_return_float_random.h
c/lecture/grammar-prob/utility/: random.h
c/lecture/gtest_practice/: CMakeLists.txt  build_script.sh  main.c
c/lecture/gtest_practice/simple/: add.h  sub.h
c/lecture/gtest_practice/tests/: add_test.cpp
c/lecture/nineth/: CMakeLists.txt  main.c
c/lecture/tenth/: CMakeLists.txt  main.c
c/sanggunyoun/seventh/: CMakeLists.txt  main.c
c/sanggunyoun/seventh/led/entity/: led.c
c/sanggunyoun/test/xx-1/: CMakeLists.txt
c/youngchanhwang/eleventh/: CMakeLists.txt  bitt.c  bitt.h  clangmun.c  clangmun.h  main.c  mul.c  mul.h
c/youngchanhwang/eleventh/13/: func_doit.c  func_doit.h  func_letsgo.c  func_letsgo.h
c/youngchanhwang/eleventh/15/: return_int.c  return_int.h
c/youngchanhwang/eleventh/clangmun_func/: int_array.c  int_array.h  int_para.c  int_para.h
c/youngchanhwang/eleventh/three/: double_int.c  double_int.h  double_un.c  double_un.h
c/youngchanhwang/eleventh/utility/: random.c  random.h
(+2892 files in other folders)
